[project]
name = "vbart"
version = "0.2.1"
description = "Volume Backup And Restoration Tool for Docker"
license = "MIT"
license-files = ["LICENSE", "LICENSE-APACHE-2_0"]
authors = [{ name = "Peter Nardi", email = "geozeke@gmail.com" }]
maintainers = [{ name = "Peter Nardi", email = "geozeke@gmail.com" }]
readme = { file = "README.md", content-type = "text/markdown" }
requires-python = ">=3.10"
keywords = [
    "archive",
    "backup",
    "compose",
    "compress",
    "compression",
    "docker",
    "restore",
    "vbart",
    "volume",
    "volumes",
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "Intended Audience :: Information Technology",
    "Intended Audience :: System Administrators",
    "Natural Language :: English",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Programming Language :: Python :: 3.14",
    "Topic :: System :: Archiving :: Backup",
    "Topic :: System :: Archiving :: Compression",
    "Topic :: Utilities",
]
dependencies = ["docker>=7.1.0"]

[project.urls]
"Source Code" = "https://github.com/geozeke/vbart"
"Bug Tracker" = "https://github.com/geozeke/vbart/issues"

[project.scripts]
vbart = "vbart.app:main"

[build-system]
requires = ["uv-build>=0.10,<0.12"]
build-backend = "uv_build"

[tool.uv.build-backend]
exclude = ["global-gitignore.txt", "Makefile", ".gitignore", "uv.lock"]

[tool.ruff.lint.isort]
force-single-line = true

[tool.coverage.run]
branch = true
source = ["src/vbart"]
omit = ["tests/*"]

[tool.coverage.report]
show_missing = true
exclude_lines = [
    "if __name__ == .__main__.:",
]

[dependency-groups]
dev = ["mypy>=1.13.0", "pytest>=8.4.2", "pytest-cov>=7.0.0", "ruff>=0.7.1"]
